--- a/clock.css
+++ b/clock.css
@@ -1,40 +1,71 @@
 
 body{
-    margin: 0;
-    background-image: url("./picture/yoons.PNG");
-    background-size: 100em;
-    align-self: center;
+    background-color: #95a5a6;
+
+
 }
 .js-clock{
-    color : rgb(138, 179, 226);
-    background-color: transparent;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    font-size: 60px;
+    color : white;
+    font-size: 40px;
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-
-
-.js-toDoForm{
-    color : navy;
-    width: 100%;
-    height: 50px;
-    background-color: transparent;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
 }
 
 .form,
 .greetings {
     display : none;
-    font-size: 30px;
+    color : white;
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    
     
 }
 
 .showing {
     display: block;
+}
+
+
+.js-toDoForm{
+    color : navy;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    margin-top:50px;
+}
+
+li {
+    color : white;
+    font-size: 25px;
+    text-decoration: none;
+    text-align: center;
+}
+
+
+#video1 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.bgimage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index:-1;
+    animation:fadeIn .5s linear;
 }
