--- a/clock.css
+++ b/clock.css
@@ -20,6 +20,11 @@ h1 {
     margin-block-end: 10px;
 }
 
+input {
+    background-color: white;
+    opacity: 0.4;
+}
+
 .form,
 .greetings {
     display : none;
@@ -39,18 +44,23 @@ h1 {
 
 
 .js-toDoForm{
-    color : navy;
+    color : white;
     background-color: transparent;
     display: flex;
     justify-content: center;
     margin-top:0px;
 }
 
+
 li {
     color : white;
     font-size: 25px;
     text-decoration: none;
     text-align: center;
+}
+
+ul {
+    list-style: none;
 }
 
 
