--- a/clock.css
+++ b/clock.css
@@ -2,6 +2,7 @@
 body{
     background-color: #95a5a6;
     margin: 0;
+    
     font-family: 'Roboto';
 
 
@@ -9,6 +10,7 @@ body{
 .js-clock{
     color : white;
     font-size: 60px;
+    font-weight: bold;
     display: flex;
     justify-content: center;
     
@@ -51,12 +53,22 @@ input {
     margin-top:0px;
 }
 
+.weather_logo{
+    vertical-align: top;
+    font-size: 15px;
+    color: grey;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-left: 10px;
+
+}
 
 li {
     color : white;
     font-size: 25px;
     text-decoration: none;
     text-align: center;
+    margin-top: 5px;
 }
 
 ul {
